@@ -27,10 +27,10 @@ Installation:
   on how it is installed in TeX Live, see the file
   http://tug.org/svn/texlive/trunk/Master/tlpkg/bin/tl-update-4ht.
 -------------------------------------------------------------------------------
-TeX4ht was created by Eitan Gurari at Ohio State University.
-Eitan died unexpectedly in June 2009.  We miss you, Eitan.
+TeX4ht was created by Eitan Gurari at Ohio State University,
+who died unexpectedly in June 2009.  We miss you, Eitan.
 
-With the encouragement and support of Eitan's children, CV Radhakrishnan
+With the encouragement and support of Eitan's family, CV Radhakrishnan
 at River Valley Technologies, Karl Berry, and others have taken over
 maintenance of the package, and welcome other volunteers. Any
-involvement, from bug reports to major new features, is appreciated.
+involvement, from bug reports to major new development, is appreciated.
