@@ -1,4 +1,24 @@
-
+% $Id$
+% Used in tex4ht.sty.  Not installed in runtime.
+% 
+% Copyright 1996--2009 Eitan M. Gurari
+% Copyright 2009, 2010 TeX Users Group.
+%
+% This work may be distributed and/or modified under the
+% conditions of the LaTeX Project Public License, either
+% version 1.3c of this license or (at your option) any
+% later version. The latest version of this license is in
+%   http://www.latex-project.org/lppl.txt
+% and version 1.3c or later is part of all distributions
+% of LaTeX version 2005/12/01 or later.
+%
+% This work has the LPPL maintenance status "maintained".
+%
+% The Current Maintainer of this work
+% is the TeX4ht Project <http://tug.org/tex4ht>.
+% 
+% If you modify this program, changing the 
+% version identification would be appreciated.
 
 %\openin15= wripro.tex
 %\ifeof15 \closein15 \else \closein15 \input wripro.tex \fi
@@ -496,5 +516,3 @@ trace the input for debugging.
 
 \<par del\><<<
 !*?: >>>
-
-
