@@ -1,8 +1,8 @@
 $Id$
 This file is public domain.  Originally written 2009, Karl Berry.
 
+- first release by the new maintainers.
 - biblatex-related bugs fixed.
 - copyright notices updated.
-- first release by the new maintainers.
 
 (previous releases by Eitan.)
